<resources>
    <string name="app_name">AndroidAssignments</string>
    <string name="hello_message">Hello World</string>
    <string name="ButtonText">I\’m a button</string>
    <string name="LoginText">Login</string>
    <string name="LoginHint">Login Name</string>
    <string name="PasswordText">Password</string>
    <string name="SwitchText">What does this do?</string>
    <string name="preference_file_key">pref_file</string>
    <string name="dialog_message">Would you like to finish the activity?</string>
    <string name="dialog_title">Finish Activity</string>
    <string name="ok">Okay</string>
    <string name="cancel">Cancel</string>
    <string name="start_chat">Start Chat</string>
    <string name="chat_placeholder">Send a Message</string>
    <string name="send_message">Send</string>
    <string name="title_activity_test_toolbar">TestToolbar</string>
    <string name="menu_choice_1">Choice 1</string>
    <string name="menu_choice_2">Choice 2</string>
    <string name="menu_choice_3">Choice 3</string>
    <string name="menu_choice_4">Choice 4</string>
    <string name="toolbar_about">About</string>
    <string name="test_toolbar">Test Toolbar</string>
    <string name="pick_color">Do you want to go back?</string>
    <string name="new_message">New Message</string>
    <string name="title_activity_weather_forecast">WeatherForecast</string>
    <string name="weather_button">Open Weather</string>
    <string name="loading_weather">Loading</string>
    <string name="dropdown_label">Current City</string>
    <string name="current_label">Current</string>
    <string name="max_label">Max</string>
    <string name="min_label">Min</string>
    <string name="temperature_label">Temperature (˚C)</string>
    <string name="delete_message">Delete This Message</string>
    <string name="message_here">MessageHere</string>
    <string name="message_id">ID=</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
