<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_one"
        android:title="@string/menu_choice_1"
        android:icon="@drawable/trash"
        android:orderInCategory="0"
        app:showAsAction="always" />
    <item android:id="@+id/action_two"
        android:title="@string/menu_choice_2"
        android:icon="@drawable/openedfolder"
        android:orderInCategory="0"
        app:showAsAction="always" />
    <item android:id="@+id/action_three"
        android:title="@string/menu_choice_3"
        android:icon="@drawable/uploadcloud"
        android:orderInCategory="2"
        app:showAsAction="always" />
    <item android:id="@+id/action_four"
        android:title="@string/menu_choice_4"
        android:icon="@drawable/support"
        android:orderInCategory="2"
        app:showAsAction="always" />
    <item android:id="@+id/action_five"
        android:title="@string/toolbar_about"
        android:orderInCategory="2"
        app:showAsAction="never" />

</menu>